apps/core/nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: nginx-test
spec:
  type: NodePort
  selector:
    app: nginx-test
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
